--- a/trunk/mtams/mtams-war/web/authorizerHome.xhtml
+++ b/trunk/mtams/mtams-war/web/authorizerHome.xhtml
@@ -14,7 +14,7 @@
                 <div id="header">
                     <div id="logo">
                         <h:form>
-                            <h:commandLink action="userHome.xhtml">
+                            <h:commandLink action="authorizerHome.xhtml">
                                 <h:graphicImage value="resources/img/logo.png" alt="Monash South Africa - A campus of Monash Univeristy Australia"/>
                             </h:commandLink>
                         </h:form>
@@ -27,20 +27,21 @@
                 </div>
                 <div class="nav"><h:form>
                         <p:menubar>
-                            <p:menuitem value="Home" icon="ui-icon-home" outcome="#{userBean.goHome()}"/>
+                            <p:menuitem value="Home" icon="ui-icon-home" outcome="#{userBean.goAuthHome()}"/>
                             <p:menuitem value="Profile" icon="ui-icon-person" outcome="#{userBean.viewProfile()}"/>
 
                         </p:menubar></h:form>
                 </div>
-                <h:form id="userHomeForm">
+                <h:form id="authorizerHomeForm">
                     <p:messages autoUpdate="true" id="userTop" closable="true" showDetail="true" />
-                    <p:panel id="appPanel" header="Current Applications">
-                        <p:button outcome="#{userBean.goNewApp()}" icon="ui-icon-plus" id="createButton"  title="Create Button" value="Create New" />
 
-                        <h4>Your application</h4>
-                        <p:dataTable id="applications" var="app" value="#{userBean.allApps}" rowKey="#{app.idapplication}" selectionMode="single" selection="#{userBean.selectedApp}" emptyMessage="No Applications have been created">  
-                            <p:ajax event="rowSelect" listener="#{userBean.view()}" 
-                                    update=":userHomeForm" />
+                    <p:panel id="appPanel" header="Current Applications">
+
+
+
+                        <p:dataTable id="applications" var="app" binding="#{userBean.dataTable}" value="#{userBean.allApps}" rowKey="#{app.idapplication}" selectionMode="single" selection="#{userBean.selectedApp}" emptyMessage="No Applications have been Submitted for Approval">  
+                            <p:ajax event="rowSelect" listener="#{userBean.display()}" 
+                                    update=":authorizerHomeForm" />
                             <p:column headerText="Description" style="width:35%">  
                                 <h:outputText value="#{app.description}" />  
                             </p:column>  
@@ -57,7 +58,6 @@
 
                         </p:dataTable>
                         <br /><br />
-                        <h4>Applications sent for approval</h4>
                         <p:dataTable id="approvals" var="appr" value="#{userBean.allApproved}" emptyMessage="No Applications have been created">  
 
                             <p:column headerText="Application Name" style="width:35%">  
@@ -85,3 +85,4 @@
 
     </body>
 </html>
+
