--- a/branches/Aaron/DataLookup/DataLookup-war/web/worldinfotest.xhtml
+++ b/branches/Aaron/DataLookup/DataLookup-war/web/worldinfotest.xhtml
@@ -9,55 +9,114 @@ and open the template in the editor.
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets">
-    <ui:composition>
-        <h:head>
-            <title>World Info currency / country / city </title>
 
-        </h:head>
-        <body>
-            <div>TODO write content</div>
-            <p>Currency List count : #{dataLookUpBean.currencyCount}</p>
+    <ui:composition template="./template/template.xhtml"> 
+
+        <ui:define name="content"> 
+
+            <h:head>
+                <title>World Info currency / country / city </title>
+
+            </h:head>
+            <body>
+
+                <p:dialog header="Header Text" widgetVar="dlgtest1"><p>Currency List count : #{dataLookUpBean.currencyCount}</p></p:dialog>
+                <p:dialog header="Header Text" widgetVar="dlgtest">
 
 
-            <br />
+                    <div id="DTdivtest" class="divCurrency" >
 
-            <p:dialog header="Header Text" widgetVar="dlgtest">//Dialog test</p:dialog>
-            <p:commandButton value="Show" type="button" onclick="dlgtest.show()" />
-            <p:commandButton value="Hide" type="button" onclick="dlgtest.hide()" />
+                        <h:form id="DTformtest" styleClass="test"> 
+                            <p:dataTable id="currencytest" styleClass="dlgCurrency" var="currency" value="#{dataLookUpBean.currencyList}" rowKey="#{currency.idcurrency}"  
+                                         selection="#{dataLookUpBean.aCurrencySelection}" selectionMode="single" scrollRows="20"  
+                                         scrollable="true" liveScroll="true" scrollHeight="150" >  
 
-            <br />
-            <h:form id="DTform"> 
-                <p:dataTable id="currencyDT" var="currency" value="#{dataLookUpBean.currencyList}" rowKey="#{currency.idcurrency}"  
-                             selection="#{dataLookUpBean.aCurrencySelection}" selectionMode="single">  
+                                <f:facet name="header">  
+                                    Click "View" button after selecting a row to see details  
+                                </f:facet>  
 
-                    <f:facet name="header">  
-                        Click "View" button after selecting a row to see details  
-                    </f:facet>  
+                                <!--                                <p:column headerText="idcurrency">  
+                                #{currency.idcurrency}  
+                            </p:column>  -->
 
-                    <p:column headerText="idcurrency">  
-                        #{currency.idcurrency}  
-                    </p:column>  
+                                <p:column headerText="countryname">  
+                                    #{currency.countryname}  
+                                </p:column>  
 
-                    <p:column headerText="countryname">  
-                        #{currency.countryname}  
-                    </p:column>  
+                                <p:column headerText="currencyname" >  
+                                    #{currency.currencyname}  
+                                </p:column>  
 
-                    <p:column headerText="currencyname" >  
-                        #{currency.currencyname}  
-                    </p:column>  
+                                <p:column headerText="currencycode3">  
+                                    #{currency.currencycode3}  
+                                </p:column>  
 
-                    <p:column headerText="currencycode3">  
-                        #{currency.currencycode3}  
-                    </p:column>  
+                                <f:facet name="footer">  
+                                    <p>#{dataLookUpBean.currencyCount}</p>
 
-                    <f:facet name="footer">  
-                        <p>#{dataLookUpBean.currencyCount}</p>
+                                </f:facet>  
 
-                    </f:facet>  
+                            </p:dataTable>  
+                        </h:form>
+                    </div>
 
-                </p:dataTable>  
-            </h:form>
-        </body>
 
+                </p:dialog>
+
+                <div>TODO write content
+                    <p>Currency List count : #{dataLookUpBean.currencyCount}</p>
+                    <p:commandButton value="Show" type="button" onclick="dlgtest.show()" />
+                    <p:commandButton value="Hide" type="button" onclick="dlgtest.hide()" />
+
+
+
+
+                </div>
+                <br />
+
+
+
+
+                <p:commandButton value="Show" type="button" onclick="dlgtest1.show()" />
+                <p:commandButton value="Hide" type="button" onclick="dlgtest1.hide()" />
+                <br />
+                <br />
+                <br />
+                <div id="DTdiv" >
+                    <h:form id="DTformND"> 
+                        <p:dataTable id="currencyDT" var="currency" value="#{dataLookUpBean.currencyList}" rowKey="#{currency.idcurrency}"  
+                                     selection="#{dataLookUpBean.aCurrencySelection}" selectionMode="single" scrollRows="20"  
+                                     scrollable="true" liveScroll="true" scrollHeight="150">  
+
+                            <f:facet name="header">  
+                                Click "View" button after selecting a row to see details  
+                            </f:facet>  
+
+                            <p:column headerText="idcurrency">  
+                                #{currency.idcurrency}  
+                            </p:column>  
+
+                            <p:column headerText="countryname">  
+                                #{currency.countryname}  
+                            </p:column>  
+
+                            <p:column headerText="currencyname" >  
+                                #{currency.currencyname}  
+                            </p:column>  
+
+                            <p:column headerText="currencycode3">  
+                                #{currency.currencycode3}  
+                            </p:column>  
+
+                            <f:facet name="footer">  
+                                <p>#{dataLookUpBean.currencyCount}</p>
+
+                            </f:facet>  
+
+                        </p:dataTable>  
+                    </h:form>
+                </div>
+            </body>
+        </ui:define>
     </ui:composition>
 </html>
